--- a/Belote/app/src/main/res/layout/activity_main.xml
+++ b/Belote/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.elkriefy.games.belote.activities.MainActivity"
+    tools:context="com.fuseteam.games.belote.com.fuseteam.games.belote.activities.MainActivity"
     android:background="@drawable/bg_table_green">
 
     <include layout="@layout/content_main" />
