--- a/Belote/app/src/main/res/layout/fragment_main.xml
+++ b/Belote/app/src/main/res/layout/fragment_main.xml
@@ -4,7 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fuseteam.games.belote.com.fuseteam.games.belote.fragments.MainActivityFragment"
+    tools:context=".fragments.MainActivityFragment"
     tools:showIn="@layout/activity_main">
+
+
+    <Button
+        android:id="@+id/login_with_google"
+        android:layout_width="wrap_content"
+        android:text="Login with Google"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/join_to_que"
+        android:layout_width="wrap_content"
+        android:text="Joint to Que"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:layout_height="wrap_content"/>
 
 </android.support.constraint.ConstraintLayout>
