added cards and their animation sequence

--- a/Belote/app/src/main/res/layout/fragment_main.xml
+++ b/Belote/app/src/main/res/layout/fragment_main.xml
@@ -7,4 +7,241 @@
     tools:context="com.fuseteam.games.belote.fragments.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
+    <!--......................................Player.Cards.......................................-->
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/playerCard1"
+        style="@style/player_card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/playerCard2" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/playerCard2"
+        style="@style/player_card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/playerCard1"
+        app:layout_constraintRight_toLeftOf="@+id/playerCard3" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/playerCard3"
+        style="@style/player_card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/playerCard2"
+        app:layout_constraintRight_toLeftOf="@+id/playerCard4" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/playerCard4"
+        style="@style/player_card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/playerCard3"
+        app:layout_constraintRight_toLeftOf="@+id/playerCard5" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/playerCard5"
+        style="@style/player_card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/playerCard4"
+        app:layout_constraintRight_toLeftOf="@+id/playerCard6" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/playerCard6"
+        style="@style/player_card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/playerCard5"
+        app:layout_constraintRight_toLeftOf="@+id/playerCard7" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/playerCard7"
+        style="@style/player_card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/playerCard6"
+        app:layout_constraintRight_toLeftOf="@+id/playerCard8" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/playerCard8"
+        style="@style/player_card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/playerCard7"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <!--...................................Opponent.left.Cards...................................-->
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentLeftCard1"
+        style="@style/opponent_left_card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.225" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentLeftCard2"
+        style="@style/opponent_left_card"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentLeftCard1" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentLeftCard3"
+        style="@style/opponent_left_card"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentLeftCard2" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentLeftCard4"
+        style="@style/opponent_left_card"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentLeftCard3" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentLeftCard5"
+        style="@style/opponent_left_card"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentLeftCard4" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentLeftCard6"
+        style="@style/opponent_left_card"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentLeftCard5" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentLeftCard7"
+        style="@style/opponent_left_card"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentLeftCard6" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentLeftCard8"
+        style="@style/opponent_left_card"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentLeftCard7" />
+
+    <!--...................................Opponent.top.Cards....................................-->
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentTopCard1"
+        style="@style/opponent_top_card"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/opponentTopCard2" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentTopCard2"
+        style="@style/opponent_top_card"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/opponentTopCard1"
+        app:layout_constraintRight_toLeftOf="@+id/opponentTopCard3" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentTopCard3"
+        style="@style/opponent_top_card"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/opponentTopCard2"
+        app:layout_constraintRight_toLeftOf="@+id/opponentTopCard4" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentTopCard4"
+        style="@style/opponent_top_card"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/opponentTopCard3"
+        app:layout_constraintRight_toLeftOf="@+id/opponentTopCard5" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentTopCard5"
+        style="@style/opponent_top_card"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/opponentTopCard4"
+        app:layout_constraintRight_toLeftOf="@+id/opponentTopCard6" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentTopCard6"
+        style="@style/opponent_top_card"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/opponentTopCard5"
+        app:layout_constraintRight_toLeftOf="@+id/opponentTopCard7" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentTopCard7"
+        style="@style/opponent_top_card"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/opponentTopCard6"
+        app:layout_constraintRight_toLeftOf="@+id/opponentTopCard8" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentTopCard8"
+        style="@style/opponent_top_card"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toRightOf="@+id/opponentTopCard7"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <!--...................................Opponent.right.Cards...................................-->
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentRightCard1"
+        style="@style/opponent_right_card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.225" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentRightCard2"
+        style="@style/opponent_right_card"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentRightCard1" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentRightCard3"
+        style="@style/opponent_right_card"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentRightCard2" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentRightCard4"
+        style="@style/opponent_right_card"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentRightCard3" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentRightCard5"
+        style="@style/opponent_right_card"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentRightCard4" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentRightCard6"
+        style="@style/opponent_right_card"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentRightCard5" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentRightCard7"
+        style="@style/opponent_right_card"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentRightCard6" />
+
+    <com.fuseteam.games.belote.ui.CardView
+        android:id="@+id/opponentRightCard8"
+        style="@style/opponent_right_card"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/opponentRightCard7" />
+
+
 </android.support.constraint.ConstraintLayout>
