--- a/Belote/app/src/main/res/values/styles.xml
+++ b/Belote/app/src/main/res/values/styles.xml
@@ -12,4 +12,29 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="player_card">
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="android:src">@drawable/back</item>
+        <item name="android:padding">2dp</item>
+    </style>
+
+    <style name="opponent_top_card" parent="player_card">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">70dp</item>
+        <item name="android:padding">1dp</item>
+    </style>
+
+    <style name="opponent_left_card" parent="player_card">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">70dp</item>
+        <item name="android:rotation">90</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_marginTop">20dp</item>
+    </style>
+
+    <style name="opponent_right_card" parent="opponent_left_card">
+        <item name="android:rotation">-90</item>
+    </style>
+
 </resources>
